changed connection strings

--- a/cvpWebApi/searchReport-en.html
+++ b/cvpWebApi/searchReport-en.html
@@ -154,7 +154,7 @@
     <!--<tiles:insert attribute="breadCrumbs" /> -->
     <!-- BREADCRUMB ENDS | FIN DE BREADCRUMB -->
     <!-- CONTENT BEGINS | DEBUT DU CONTENU -->
-    <script src="./js/cvpfunctions.js"></script>
+    <script type="text/javascript" src="./js/cvpfunctions.js"></script>
     <main role="main" property="mainContentOfPage" class="container">
 
        
