--- a/cvpWebApi/index-en.html
+++ b/cvpWebApi/index-en.html
@@ -182,78 +182,78 @@
                         <tbody>
                             <tr>
                                 <td>Drug product ingredients:</td>
-                                <td><a class="btn btn-default" href="/api/drugproductingredient/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/drugproductingredient/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/drugproductingredient/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/drugproductingredient/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Drug Products:</td>
-                                <td> <a class="btn btn-default" href="/api/drugproduct/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/drugproduct/?type=xml">XML</a></td>
+                                <td> <a class="btn btn-default" href="./api/drugproduct/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/drugproduct/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Gender:</td>
-                                <td> <a class="btn btn-default" href="/api/gender/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/gender/?type=xml">XML</a></td>
+                                <td> <a class="btn btn-default" href="./api/genderlx/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/genderlx/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Outcome:</td>
-                                <td> <a class="btn btn-default" href="/api/outcome/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/outcome/?type=xml">XML</a></td>
+                                <td> <a class="btn btn-default" href="./api/outcomelx/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/outcomelx/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Reactions:</td>
-                                <td> <a class="btn btn-default" href="/api/reaction/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/reaction/?type=xml">XML</a></td>
+                                <td> <a class="btn btn-default" href="./api/reactions/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reactions/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Report Drug:</td>
-                                <td> <a class="btn btn-default" href="/api/reportdrug/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/reportdrug/?type=xml">XML</a></td>
+                                <td> <a class="btn btn-default" href="./api/reportdrug/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reportdrug/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Report Drug Indication:</td>
-                                <td><a class="btn btn-default" href="/api/reportdrugindication/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/reportdrugindication/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/reportdrugindication/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reportdrugindication/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Report Links:</td>
-                                <td><a class="btn btn-default" href="/api/reportlink/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/reportlink/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/reportlinkslx/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reportlinkslx/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Report Type Lx:</td>
-                                <td><a class="btn btn-default" href="/api/reporttypelx/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/reporttypelx/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/reporttypelx/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reporttypelx/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Reports:</td>
-                                <td><a class="btn btn-default" href="/api/report/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/report/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/report/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/report/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>All Report by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
-                                <td><a class="btn btn-default" href='' onclick="this.href='/api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                                <td><a class="btn btn-default" href='' onclick="this.href = '/api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
+                                <td><a class="btn btn-default" href='' onclick="this.href='./api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
+                                <td><a class="btn btn-default" href='' onclick="this.href = './api/report?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Seriousness Lx:</td>
-                                <td><a class="btn btn-default" href="/api/seriousness/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/seriousness/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/seriousnesslx/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/seriousnesslx/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Source Lx:</td>
-                                <td><a class="btn btn-default" href="/api/source/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/source/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/sourcelx/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/sourcelx/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>All Report Info:</td>
-                                <td><a class="btn btn-default" href="/api/reportinfo/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="/api/reportinfo/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/reportinfo/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reportinfo/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>All Report Info by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
-                                <td><a class="btn btn-default" href='' onclick="this.href='/api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
-                                <td><a class="btn btn-default" href='' onclick="this.href = '/api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
+                                <td><a class="btn btn-default" href='' onclick="this.href='./api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=json'">Json</a></td>
+                                <td><a class="btn btn-default" href='' onclick="this.href = './api/reportinfo?drugname=' + '%' + document.getElementById('strDrugName').value + '%' + '&type=xml'">XML</a></td>
                             </tr>
 
                         </tbody>
