Fixed issues in classes and db.

--- a/cvpWebApi/index-en.html
+++ b/cvpWebApi/index-en.html
@@ -83,7 +83,7 @@
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
                             <li>
-                                <a lang="fr" href="default_fr.aspx?lang=fr">Français</a>
+                                <a lang="fr" href="index-fr.html?lang=fr">Français</a>
 
 
                             </li>
@@ -217,8 +217,8 @@
                             </tr>
                             <tr>
                                 <td>Report Links:</td>
-                                <td><a class="btn btn-default" href="./api/reportlinkslx/?type=json">Json</a></td>
-                                <td><a class="btn btn-default" href="./api/reportlinkslx/?type=xml">XML</a></td>
+                                <td><a class="btn btn-default" href="./api/reportlinks/?type=json">Json</a></td>
+                                <td><a class="btn btn-default" href="./api/reportlinks/?type=xml">XML</a></td>
                             </tr>
                             <tr>
                                 <td>Report Type Lx:</td>
