--- a/cvpWebApi/canada-vigilance.html
+++ b/cvpWebApi/canada-vigilance.html
@@ -131,9 +131,9 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                     <ol class="breadcrumb">
                         <li><a href="http://canada.ca/en/index.html">Home</a></li>
                         <li><a href="http://healthycanadians.gc.ca/index-eng.php">Health</a></li>
-                        <!--<li><a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/index-eng.php">Drug and health products</a></li>
-                        <li><a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/inspecting-monitoring-inspection-controle/index-eng.php">Inspecting and monitoring drug and health products</a></li>
-                        <li><a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/inspecting-monitoring-inspection-controle/inspections/index-eng.php">Drug and health product inspections</a></li>-->
+                        <li><a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/index-eng.php">Drug and health products</a></li>
+                        <li><a href="canada-vigilance.html">Canada Vigilance Adverse Reaction Online Database</a></li>
+                        <!--<li><a href="http://healthycanadians.gc.ca/drugs-products-medicaments-produits/inspecting-monitoring-inspection-controle/inspections/index-eng.php">Drug and health product inspections</a></li>-->
                     </ol>
                 </div>
             </div>
