--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Drug &amp; health product register</title>
+    <title>Effets Indésirables de Canada Vigilance</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="dcterms.language" title="ISO639-2" content="eng" />
@@ -143,8 +143,8 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
     <div class="container">
             <main role="main" property="mainContentOfPage" class="container">
                 <div class="wb-frmvld">
-                    <form name="cvp" action="canada-vigilance-result.html" method="get" id="cvp">
-                        <h1 property="name" id="wb-cont">Canada Vigilance Adverse Reaction Database</h1>
+                    <form name="cvp" action="canada-vigilance-resultat.html" method="get" id="cvp">
+                        <h1 property="name" id="wb-cont">Effets Indésirables de Canada Vigilance</h1>
                                 <p>The Canada Vigilance Adverse Reaction Online Database contains information about suspected adverse reactions (also known as side effects) to health products.</p>
                                 <!--<ul>
                                     <li><a href="canada-vigilance-result.html?lang=en&amp;term=">Line listing by date</a></li>
@@ -153,12 +153,12 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
 
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
-                                        <h2 class="panel-title">Search Adverse Reaction Online Database</h2>
+                                        <h2 class="panel-title">Recherche effets indésirables de Canada Vigilance</h2>
                                     </div>
                                     <div class="panel-body">
                                         <div class="form-group">
                                             <label for="term" class="control-label required">
-                                                <span class="field-name">Brand/Drug Name:</span>
+                                                <span class="field-name">Produits de santé:</span>
                                                 <strong class="required">(required)</strong>
                                             </label>
                                             <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name, Gender and Report Outcome.]" class="full-width" required="required">
