French pages labels and language switch

--- a/cvpWebApi/canada-vigilance.html
+++ b/cvpWebApi/canada-vigilance.html
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="index-fr.html">Français</a></li>
+                            <li><a lang="fr" href="canada-vigilance-fr.html">Français</a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,6 +200,11 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                 </div>
             </main>
     </div>
+
+    <aside class="gc-nttvs container">
+        <h2>Government of Canada activities and initiatives</h2>
+        <div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="//cdn.canada.ca/gcweb-cdn-live/features/features-en.html"><p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p> </div>
+    </aside>
 
     <footer role="contentinfo" id="wb-info">
         <nav role="navigation" class="container visible-sm visible-md visible-lg wb-navcurr">
