--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="searchResult-fr.html" id="langLink">Français</a></li>
+                            <li><a lang="fr" href="canada-vigilance-resultat.html" id="langLink">Français</a></li>
                         </ul>
                     </div>
                 </div>
@@ -209,6 +209,10 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
             </div>
         </main>
  </div>
+    <aside class="gc-nttvs container">
+        <h2>Government of Canada activities and initiatives</h2>
+        <div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="//cdn.canada.ca/gcweb-cdn-live/features/features-en.html"><p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p> </div>
+    </aside>
     <footer role="contentinfo" id="wb-info">
         <nav role="navigation" class="container visible-sm visible-md visible-lg wb-navcurr">
             <h2 class="wb-inv">About this site</h2>
@@ -306,10 +310,10 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
     <!--<![endif]-->
  
     <script>
-        var lang = " en";
+        var lang = "en";
         var pType = "cvp";
         $('#btnDownload').hide();
-        //$("a#langLink").attr('href', goDhprLangUrl(lang, pType));            
+        $("a#langLink").attr('href', goDhprLangUrl(lang, pType));            
         
             window["wb-tables"] = {
                 "processing": true,
