--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -158,10 +158,10 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                         <div class="panel-body">
                             <div class="form-group">
                                 <label for="term" class="control-label required">
-                                    <span class="field-name">Produits de santé:</span>
+                                    <span class="field-name">Produits de santé ou terme d'effet indésirable:</span>
                                     <strong class="required">(obligatoire)</strong>
                                 </label>
-                                <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name, Gender and Report Outcome._fr]" class="full-width" required="required">
+                                <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Adverse Reaction Term]" class="full-width" required="required">
                                 <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                                 <!--<label for="sourceOfReport" class="control-label">
                                     <span class="field-name">Source of Report:</span>
