--- a/cvpWebApi/canada-vigilance.html
+++ b/cvpWebApi/canada-vigilance.html
@@ -158,10 +158,10 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                                     <div class="panel-body">
                                         <div class="form-group">
                                             <label for="term" class="control-label required">
-                                                <span class="field-name">Brand/Drug Name:</span>
+                                                <span class="field-name">Brand/Drug Name or Adverse Reaction Term:</span>
                                                 <strong class="required">(required)</strong>
                                             </label>
-                                            <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name, Gender and Report Outcome.]" class="full-width" required="required">
+                                            <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Adverse Reaction Term]" class="full-width" required="required">
                                             <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                                             <!--<label for="sourceOfReport" class="control-label">
                                                 <span class="field-name">Source of Report:</span>
